# vis-ex-nihil-render

./: .gitignore  CMakeLists.txt  L3D-engine.sln  L3D-engine.vcxproj  L3D-engine.vcxproj.filters  LICENSE.md  README.md  SETUP.md  TerminalColors.hpp  implicit_cast.h  implicit_cast.hpp  main.cpp  nihil-lib.vcxproj  nihil-lib.vcxproj.filters  nihil-render.sln  nihil.hpp  nihil.sln  nihil.vcxproj  nihil.vcxproj.filters
Classes/: ClassAPI.h
Classes/App/: App.cpp  App.h  App.hpp
Classes/Buffer/: Buffer.hpp  Buffer.tpp
Classes/Camera/: Camera.cpp  Camera.hpp
Classes/Commands/: Command.hpp
Classes/Engine/: Engine.Draw.cpp  Engine.DynamicPipeline.cpp  Engine.Pipeline.cpp  Engine.Primary.cpp  Engine.Render.cpp  Engine.ResourceStorage.cpp  Engine.Structs.InData.h  Engine.Structs.InData.hpp  Engine.cpp  Engine.h  Engine.hpp  RenderStructs.hpp
Classes/IndexBuffer/: IndexBuffer.hpp
Classes/InstanceData/: InstanceData.hpp
Classes/MaxwellsEngine/: MaxwellsEngine.cpp  MaxwellsEngine.h
Classes/Memory/: Memory.cpp  Memory.h  Memory.hpp
Classes/Model/: Model.cpp  Model.hpp
Classes/Renderer/: Renderer.Pipeline.cpp  Renderer.Render.cpp  Renderer.Swapchain.cpp  Renderer.cpp  Renderer.hpp
Classes/SPIRV/: SPIRV.cpp  SPIRV.h  SPIRV.hpp
Classes/Scene/: Scene.hpp
Classes/VertexBuffer/: VertexBuffer.h  VertexBuffer.hpp
HeaderFiles/RenderStructs/: RenderStructs.h
Shaders/: shader.frag  shader.vert  shaderF.spv  shaderV.spv
nihil-standard/: nstd.hpp  nstd.lib
nihil-standard/headers/: Callable.hpp  ComponentSystem.hpp  FS.hpp  USC.hpp  (+4 more)
nstd/: nstd.hpp  nstd.lib
(+24 files in other folders)
